admin part compalet

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -291,7 +291,7 @@
                     </div>
                     <div class="data-footer">
                         <a href="#/my/appraisal" class="btn-flat">Process</a>
-                        <a href="#/appraisal/admin" class="btn-flat">Initiation</a>
+                        <a href="#/appraisal/admin/empList" class="btn-flat">Initiation</a>
                     </div>
                 </div>            
                 <div class="card white card-bg separation-bg">
