Css changes fot travel module and building new forms.

--- a/src/app/modules/travel/travel.approval.history.template.html
+++ b/src/app/modules/travel/travel.approval.history.template.html
@@ -1,7 +1,7 @@
 <div id="travel-history" class="col s12 tab-content padding-zero" style="display: block;">
     <div class="row main-data-container">
         <div class="col s12 padding-zero">
-            <div class="reimbursement-wrapper travel-data" *ngIf="travelsModel.length != 0">
+            <div class="reimbursement-wrapper approvals-data-blue" *ngIf="travelsModel.length != 0">
                 <div class="row m-bottom0 header hide-on-med-and-down">
                     <div class="col s12 m1 offset-m3">
                         <h5 class="title">Req ID</h5>
