--- a/src/app/modules/travel/travel.extension.template.html
+++ b/src/app/modules/travel/travel.extension.template.html
@@ -21,7 +21,7 @@
                     <form #myForm="ngForm" novalidate="novalidate">
                         <div class="card white approvals-card margin-zero padding-20">
                             <div class="row margin-zero valign-wrapper ">
-                                    <div class="col s5 padding-zero">
+                                    <div class="col s5 padding-zero m-bottom10">
                                         <h5 class="trip-heading"><img src="assets/images/trip-extension.svg" class="view-icon" title="Travel Extension">{{traveldetails.travelFrom}}</h5>
                                         <div class="input-field">
                                             <input placeholder="Departure" type='text' readonly="readonly" [(ngModel)]="extensionItem.departure" name="name" #name="ngModel" required="required"/>
@@ -34,52 +34,37 @@
                                             <img src="assets/images/arrow-inout.svg" title="Travel-trip">
                                         </div>
                                     </div>
-                                    <div class="col s5 padding-zero">
+                                    <div class="col s5 padding-zero m-bottom10">
                                         <h5 class="trip-heading"><img src="assets/images/trip-extension.svg" class="view-icon" title="Travel Extension">{{traveldetails.travelTo}}</h5>
                                         <div class="input-field">
-                                            <input  required="required" style='position:relative' type='text' name="arrivalDate" #arrivalDate="ngModel" [(ngModel)]="extensionItem.arrival" materialize="pickadate" [materializeParams]='dateFormat' updateMaterializeParams class="" />
+                                            <input  required="required" style='position:relative' type='text' name="arrivalDate" #arrivalDate="ngModel" [ngClass]="{borderbottom: !arrivalDate.valid && formSubmit}" [(ngModel)]="extensionItem.arrival" materialize="pickadate" [materializeParams]='dateFormat' updateMaterializeParams class="" />
                                             <label for="arrivalDate" class="active">Arrival</label>
                                             <div *ngIf="formSubmit && !arrivalDate.valid" class="alert alert-danger">Departure is required </div>
                                         </div>
                                     </div>
-                                    <div class="col s5 padding-zero">
+                                    <div class="col s5 padding-zero m-bottom10" id="visa-date">
                                         <div class="input-field">
-                                            <input required="required" name="visaDate" #visaDate="ngModel" value="23/02/2017" type="text" class="" [(ngModel)]="extensionItem.visaDate" materialize="pickadate" [materializeParams]='dateFormat' updateMaterializeParams>
+                                            <input required="required" name="visaDate" #visaDate="ngModel" value="23/02/2017" type="text" class="" [ngClass]="{borderbottom: !visaDate.valid && formSubmit}" [(ngModel)]="extensionItem.visaDate" materialize="pickadate" [materializeParams]='dateFormat' updateMaterializeParams>
                                             <label for="visaDate" class="active">Visa Date</label>
                                             <div *ngIf="formSubmit && !visaDate.valid" class="alert alert-danger">Visa Date is required </div>
                                         </div>
                                     </div>
-                                    <div class="col s5 padding-zero">
+                                    <div class="col s5 offset-s2 padding-zero m-bottom10">
                                         <div class="input-field">
-                                            <input value="23/02/2017" type="text"  required="required" name="i94date" #i94date="ngModel" class="" [(ngModel)]="extensionItem.I94Date" materialize="pickadate" [materializeParams]='dateFormat' updateMaterializeParams>
+                                            <input value="23/02/2017" type="text" [ngClass]="{borderbottom: !i94date.valid && formSubmit}" required="required" name="i94date" #i94date="ngModel" class="" [(ngModel)]="extensionItem.I94Date" materialize="pickadate" [materializeParams]='dateFormat' updateMaterializeParams>
                                             <label for="i94date" class="active">I94 Date</label>
                                             <div *ngIf="formSubmit && !i94date.valid" class="alert alert-danger">I94 Date is required </div>
                                         </div>
                                     </div>
+                                    <div class="col s12 padding-zero">
+                                        <div class="input-field">
+                                            <input [(ngModel)]="extensionItem.comments" [ngClass]="{borderbottom: !comments.valid && formSubmit}" class="validate" type="text" required="required" name="comments" #comments="ngModel">
+                                            <label for="comments" class="active">Comments</label>
+                                            <div *ngIf="formSubmit && !comments.valid" class="alert alert-danger">Comments is required </div>
+                                        </div>
+                                    </div>
                                 </div>
-
-                            <!--<ui-form #extensionForm [controlMetas]="extensionHub" [model]="extensionItem" [errorOnlyOnSubmit]='formSubmit' [formReadonly]='false' formCss='view-card'
-                                columnOrientation='2' inputLabelPosition='top' controlCss='view-form-info'>
-                                
-                                <ui-control-item for='departure' behaviours='[ {"value":""}]'>
-                                </ui-control-item>
-                                <ui-control-item for='arrival' behaviours='[ {"value":""}]'>
-                                </ui-control-item>
-                                <ui-control-item for='visaDate' behaviours='[ {"value":""}]'>
-                                </ui-control-item>
-                                <ui-control-item for='I94Date' behaviours='[ {"value":""}]'>
-                                </ui-control-item>
-
-                            </ui-form>-->
-
-                            <div class="row margin-zero">
-                                <div class="input-field col s12 padding-zero">
-                                    <input [(ngModel)]="extensionItem.comments" type="text" class="" required="required" name="comments" #comments="ngModel">
-                                    <label for="comments" class="active">Comments</label>
-                                    <div *ngIf="formSubmit && !comments.valid" class="alert alert-danger">Comments is required </div>
-                                </div>
-                            </div>
-                            <div class="row margin-zero right">
+                            <div class="row m-top20 right">
                                 <a (click)="SubmitTravelExtension($event, myForm)" class="waves-effect waves-light btn custom-btn save-as-draft" title="Submit">Submit</a>
                             </div>
                         </div>
