--- a/src/app/modules/travel/travel.view.my.history.template.html
+++ b/src/app/modules/travel/travel.view.my.history.template.html
@@ -15,7 +15,7 @@
                 <a href="/#/my/travel/history" class="waves-effect waves-light btn back-btn"><i class="fa fa-angle-left left" title="Back to List" aria-hidden="true"></i>Back</a>
             </div>
         </div>
-        <div class="reimbursement-wrapper travel-data">
+        <div class="reimbursement-wrapper approvals-data-blue">
             <div class="row m-bottom0 header hide-on-med-and-down">
                 <div class="col s12 m2">
                     <h5 class="title">Req ID</h5>
@@ -71,7 +71,7 @@
                         <div class="row margin-zero">
                             <div class="col s12 bottom-divider p-left10 m-top20">
                                 <div class="col s12 m12 l3 padding-zero">
-                                    <ul materialize="tabs" class="tabs approvals-tabs" style="width: 100%;">
+                                    <ul materialize="tabs" class="tabs approvals-tabs travel-tabs" style="width: 100%;">
                                         <li class="tab col s3"><a class="active" href="#traveller-details">TRAVELLER DETAILS</a></li>
                                         <li class="tab col s3"><a href="#additional-info">ADDITIONAL INFORMATION</a></li>
                                         <div class="indicator" style="right: 0px; left: 0px;"></div>
@@ -416,7 +416,7 @@
                                                     <div class="col s12 padding-zero">
                                                         <div class="table-responsive">
                                                             <table class="striped responsive-table scroll">
-                                                                <thead class="thead-custom-style travel-card">
+                                                                <thead class="thead-custom-style travel-blue">
                                                                     <tr>
                                                                         <th class="col-width-20" data-field="date">Date</th>
                                                                         <th class="col-width-20" data-field="transaction-details">Transaction Details</th>
