--- a/src/app/modules/travel/travel.view.my.history.template.html
+++ b/src/app/modules/travel/travel.view.my.history.template.html
@@ -380,13 +380,13 @@
                                                 <div class="row">
                                                     <div class="col s6">
                                                         <div class="view-form-info">
-                                                            <h5>{{travelModel.travelDetails.mealPreference.description}}</h5>
+                                                            <h5>{{travelModel.travelDetails.meal}}</h5>
                                                             <h6>Meal Preference</h6>
                                                         </div>
                                                     </div>
                                                     <div class="col s6">
                                                         <div class="view-form-info">
-                                                            <h5>{{travelModel.travelDetails.seatLocationPreference.description}}</h5>
+                                                            <h5>{{travelModel.travelDetails.seatlocation}}</h5>
                                                             <h6>Seat Location Preference</h6>
                                                         </div>
                                                     </div>
