--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -241,16 +241,16 @@
                         <a href="#/my/expense/new" class="btn-flat">NEW EXPENSE</a>
                     </div>
                 </div>
-                <div class="card white card-bg travel-bg" id="travel-without-records">
-                    <div class="row m-bottom0 height-60">
+                
+                <div class="card white card-bg travel-bg" id="travel-without-records" style="display: inline-block;">
+                    <div class="row m-bottom0 height-100">
                         <div class="col s12">
                             <h5>Travel</h5>
                         </div>
                     </div>
                     <div class="data-footer">
-                        <span class="btn-flat">Upcoming.. </span>
+                        <a href="#/my/travel/new" class="btn-flat">NEW REQUEST</a>
                     </div>
-                    <div class="overlay-upcoming"></div>
                 </div>
                 <div class="card white card-bg appraisal-bg" *ngIf="!appraisalAssignedTo">
                     <div class="row m-bottom0 height-60">
