--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -260,7 +260,7 @@
                     </div>
                     <div class="data-footer">
                         <a class="btn-flat">Process</a>
-                        <a href="#/appraisal/admin" class="btn-flat">Initiation</a>
+                        <a href="#/appraisal/admin/empList" class="btn-flat">Initiation</a>
                     </div>
                 </div>
                 <div class="card white card-bg" *ngIf="appraisalAssignedTo">
